# primeproperty-axum

./: .env.example  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yaml
.github/workflows/: build-develop.yaml  build.yaml  develop.yaml
migrations/2024-12-15-032643_create_users/: up.sql
migrations/2024-12-21-030452_ai_system_prompts/: down.sql  up.sql
migrations/2024-12-21-073157_add_ai_system_prompt_title/: down.sql  up.sql
migrations/2024-12-22-030522_updated_at_trigger/: up.sql
migrations/2024-12-23-001834_languages/: down.sql  up.sql
migrations/2024-12-25-100532_translations/: up.sql
migrations/2024-12-28-075232_checkbot/: down.sql  up.sql
migrations/2024-12-29-025652_tts/: up.sql
migrations/2024-12-29-044938_transcription/: down.sql  up.sql
migrations/2025-01-03-045447_history/: down.sql  up.sql
migrations/2025-01-04-041501_tts_voice/: down.sql  up.sql
migrations/2025-01-04-070517_transcription_language/: down.sql  up.sql
migrations/2025-01-08-075251_translation_storage/: down.sql  up.sql
migrations/2025-01-11-083244_checkbot_storage/: down.sql  up.sql
migrations/2025-01-13-075421_tts_storage/: down.sql  up.sql
migrations/2025-01-14-022342_transcription_storage/: down.sql  up.sql
migrations/2025-01-18-024421_languageai_subscription_plans/: down.sql  up.sql
migrations/2025-01-18-131652_languageai_subscription_payments/: down.sql  up.sql
migrations/2025-01-22-071744_languageai_subscriptions/: down.sql  up.sql
migrations/2025-02-12-070301_storage_title_visibility/: down.sql  up.sql
migrations/2025-02-16-015415_transcription_minutes_plans_description/: down.sql  up.sql
migrations/2025-02-17-065518_translate_storage_sharing/: down.sql  up.sql
migrations/2025-02-27-064608_ai_models/: down.sql  up.sql
migrations/2025-03-01-023006_tars_chat_rooms/: down.sql  up.sql
migrations/2025-03-01-073155_tars_chat_messages/: down.sql  up.sql
migrations/2025-03-06-133626_translation_tokens/: down.sql  up.sql
src/: connection.rs  db.rs  main.rs  schema.rs  utils.rs
src/agents/: agent_role.rs  controller.rs  (+2 more)
(+123 files in other folders)
