[package]
name = "inception-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
chrono = {version = "0.4.39", features = ["serde"]}
diesel = { version = "2.2.6", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenvy = "0.15.7"
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"]}
uuid = {version = "1.11.0", features = ["v4", "serde"]}
