[package]
name = "inception-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
chrono = {version = "0.4.39", features = ["serde"]}
diesel = { version = "2.2.6", features = ["postgres", "r2d2", "uuid", "chrono", "numeric", "serde_json"] }
dotenvy = "0.15.7"
reqwest = {version = "0.12.9", features = ["json"]}
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"]}
uuid = {version = "1.11.0", features = ["v4", "serde"]}
jsonwebtoken = "9.3.0"
openssl = {version = "0.10.68", features = ["vendored"]}
bigdecimal = { version = "0.4.7", features = ["serde"] }
