[package]
name = "inception-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
bigdecimal = { version = "0.4.7", features = ["serde"] }
chrono = {version = "0.4.39", features = ["serde"]}
diesel = { version = "2.2.6", features = ["postgres", "r2d2", "uuid", "chrono", "numeric", "serde_json"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
openssl = {version = "0.10.70", features = ["vendored"]}
reqwest = {version = "0.12.9", features = ["json"]}
sentry = "0.36.0"
sentry-tower = {version = "0.36.0", features = ["http"]}
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"]}
tower-http = {version="0.6.2", features = ["cors", "trace"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
uuid = {version = "1.11.0", features = ["v4", "serde"]}
